Correción de Logout con Sammy y redirecciones

--- a/src/main/resources/static/css/sam.css
+++ b/src/main/resources/static/css/sam.css
@@ -118,3 +118,7 @@ input::placeholder{
 	vertical-align: middle;
 	text-align: center;
 }
+
+.sam-lout:hover{
+	background-color: rgba(0,0,0,.1);
+}
