Avance de listado producto y agregar js para despliegue de menu user

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2643,7 +2643,9 @@ input[type="button"].btn-block {
   margin-left: 0; }
 
 .dropright .dropdown-toggle::after {
-  vertical-align: 0; }
+  vertical-align: 0; 
+  margin-left: 15px;
+  }
 
 .dropleft .dropdown-menu {
   top: 0;
